[gd_scene load_steps=11 format=3 uid="uid://bbeonulhxd7po"]

[ext_resource type="Script" path="res://scripts/background/level.gd" id="1_50t46"]
[ext_resource type="TileSet" uid="uid://ditbsoabmcsvt" path="res://assets/background/tileset.tres" id="2_ajrgt"]
[ext_resource type="PackedScene" uid="uid://bmvdjelkyy5nc" path="res://fionna.tscn" id="3_2kmmk"]
[ext_resource type="PackedScene" uid="uid://b60ct8smlpe8t" path="res://fred.tscn" id="4_3mbr2"]
[ext_resource type="PackedScene" uid="uid://b0hc2367x8n47" path="res://tongue.tscn" id="5_uocio"]
[ext_resource type="PackedScene" uid="uid://5h3a0grtuw0e" path="res://scenes/Interactables/coin.tscn" id="5_uw3d0"]
[ext_resource type="Script" path="res://scripts/ui/UIManager.gd" id="8_fqwd6"]
[ext_resource type="Texture2D" uid="uid://c24qwvmitwq7s" path="res://assets/background/fourSeasonsPlatformer_ [tileset, version 2.0]/fourSeasonsPlatformer_ [tileset, version 2.0]/objects_/coin_.png" id="8_he4xu"]
[ext_resource type="PackedScene" uid="uid://dlrbuaqc6ulsh" path="res://scenes/backgroundScenes/next_level_area.tscn" id="10_82gpl"]
[ext_resource type="PackedScene" uid="uid://doi8fr7k3rvb2" path="res://scenes/backgroundScenes/next_level_platform.tscn" id="10_fgjag"]

[node name="level_1_1" type="Node2D"]
script = ExtResource("1_50t46")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = ExtResource("2_ajrgt")
format = 2
layer_0/tile_data = PackedInt32Array(1572883, 196609, 1, 1638419, 196609, 2, 1572884, 262145, 1, 1638420, 262145, 2, 1572885, 327681, 1, 1638421, 327681, 2, 1572875, 196609, 1, 1638411, 196609, 2, 1572876, 262145, 1, 1638412, 262145, 2, 1572877, 327681, 1, 1638413, 327681, 2, 1310752, 196609, 1, 1376288, 196609, 2, 1310753, 262145, 1, 1376289, 262145, 2, 1310754, 327681, 1, 1376290, 327681, 2, 1441818, 196609, 1, 1507354, 196609, 2, 1441819, 262145, 1, 1507355, 262145, 2, 1441820, 327681, 1, 1507356, 327681, 2)

[node name="Fionna" parent="." instance=ExtResource("3_2kmmk")]
position = Vector2(479, 716)
scale = Vector2(0.7, 0.7)

[node name="Fred" parent="." instance=ExtResource("4_3mbr2")]
position = Vector2(401, 758)

[node name="Tongue" parent="Fred" instance=ExtResource("5_uocio")]
position = Vector2(0, -1)

[node name="CoinHolder" type="Node2D" parent="."]
position = Vector2(1, 1)

[node name="Coin" parent="CoinHolder" instance=ExtResource("5_uw3d0")]
position = Vector2(622, 753)

[node name="Coin2" parent="CoinHolder" instance=ExtResource("5_uw3d0")]
position = Vector2(643, 753)

[node name="Coin3" parent="CoinHolder" instance=ExtResource("5_uw3d0")]
position = Vector2(665, 753)

[node name="Coin4" parent="CoinHolder" instance=ExtResource("5_uw3d0")]
position = Vector2(687, 753)

[node name="Coin5" parent="CoinHolder" instance=ExtResource("5_uw3d0")]
position = Vector2(939, 704)

[node name="Coin6" parent="CoinHolder" instance=ExtResource("5_uw3d0")]
position = Vector2(1011, 670)

[node name="margins" type="Node2D" parent="."]

[node name="top_left" type="Node2D" parent="margins"]

[node name="bottom_right" type="Node2D" parent="margins"]
position = Vector2(1921, 1080)

[node name="UIManager" type="CanvasLayer" parent="."]
script = ExtResource("8_fqwd6")

[node name="CoinIcon" type="Sprite2D" parent="UIManager"]
position = Vector2(34, 26)
scale = Vector2(3.09, 3)
texture = ExtResource("8_he4xu")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CoinDisplay" type="Label" parent="UIManager"]
offset_left = 58.0
offset_top = 6.0
offset_right = 102.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 28
text = "0"

[node name="next_level_area" parent="." instance=ExtResource("10_82gpl")]
next_scene_path = "res://scenes/backgroundScenes/level1_2.tscn"

[node name="MovingPlatform" parent="." instance=ExtResource("10_fgjag")]
position = Vector2(1217, 648)

[connection signal="is_moving" from="Fionna" to="Fred/Tongue" method="_on_fionna_is_moving"]
